<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.4.5</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>com.gruppe4</groupId>
	<artifactId>boredoom-backend</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>boredoom-backend</name>
	<description>Backend für die Boredoom-Webapp</description>

	<properties>
		<java.version>11</java.version>
		<!--Hier Credentials und Datenbank-Url eintragen-->
		<boredoom.flyway.database>jdbc:mysql://localhost:3306/site</boredoom.flyway.database>
		<boredoom.flyway.user>user</boredoom.flyway.user>
		<boredoom.flyway.password>password</boredoom.flyway.password>
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
		 <groupId>org.springframework.boot</groupId>
		 <artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
 		</dependency>

    <dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.flywaydb</groupId>
				<artifactId>flyway-maven-plugin</artifactId>
				<version>7.8.2</version>
				<configuration>
          <url>${boredoom.flyway.database}</url>
					<user>${boredoom.flyway.user}</user>
					<password>${boredoom.flyway.password}</password>
          <!-- Ab hier sind die configurations nur dafür da,
              um die Datenbank um eine flyway_schema_history tabelle zu erweitern,
              die automatisch angelegt wird-->
          <baselineOnMigrate>false</baselineOnMigrate>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>mysql</groupId>
						<artifactId>mysql-connector-java</artifactId>
						<version>8.0.24</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>

</project>
